tests/compile_errors/022-var-decl-without-value.buzz
| Expected variable initial value
test "Var decl without a value" {
    str canidothis;
}